<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal"
            android:text="@string/tv_Main"
            android:textColor="#FF5722"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/editTextNumberDecimal01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:hint="@string/et_01"
            android:inputType="numberDecimal"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/button01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/btn_01"
            android:textAllCaps="false"
            android:textColor="#E91E63" />

        <Switch
            android:id="@+id/switch01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switch_01" />

        <CheckBox
            android:id="@+id/checkBox01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkBox_01"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="ToggleButton01"
            android:textColor="#915D11"
            android:textOff="@string/tb01_Off"
            android:textOn="@string/tb01_On"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>