<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <EditText
            android:id="@+id/editText01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/et_02"
            android:inputType="text" />

        <EditText
            android:id="@+id/editText02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="11"
            android:hint="@string/et_03"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editText03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="12"
            android:hint="@string/et_04"
            android:inputType="phone" />

        <EditText
            android:id="@+id/editText04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="13"
            android:hint="@string/et_05"
            android:inputType="number" />

        <EditText
            android:id="@+id/editText05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="14"
            android:hint="@string/et_06"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editText06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:hint="@string/et_07"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editText07"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_08"
            android:inputType="textCapWords" />

        <CalendarView
            android:id="@+id/calendarView01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>